# adresar

./: .gitignore  Adresar.cpp  Adresar.h  Aplikacija.cpp  Aplikacija.h  CMakeLists.txt  Meni.cpp  Meni.h  README.md  Stavka.cpp  Stavka.h  main.cpp
